output/dev/expr-testfile-7.err
output prefix: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7
llvmas: /Users/cmk/llvm/bin/llvm-as
llc: /Users/cmk/llvm/bin/llc
cc: gcc
codegen: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decafexpr
stdlib: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decaf-stdlib.c
generating llvm code:/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decafexpr ... ok
LogError: Redefining variable in same scope
; ModuleID = 'Test'

declare void @print_int(i32)

define i32 @main() {
entry:
  %y = alloca i32
  %x = alloca i32
  store i32 958, i32* %x
  %x1 = load i32, i32* %x
  %multmp = mul i32 %x1, -30
  %addtmp = add i32 %multmp, 80
  store i32 %addtmp, i32* %y
  %y2 = load i32, i32* %y
  %negtmp = sub i32 0, %y2
  store i32 %negtmp, i32* %x
  store i32 -2, i32* %y
  %x3 = load i32, i32* %x
  call void @print_int(i32 %x3)
  ret i32 0
}
assembling to bitcode:/Users/cmk/llvm/bin/llvm-as "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm" -o "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm.bc" ... failed (1)
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm:1:1: error: expected top-level entity
LogError: Redefining variable in same scope
^
converting to native code:/Users/cmk/llvm/bin/llc "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm.bc" -o "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm.s" ... failed (1)
/Users/cmk/llvm/bin/llc: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm.bc: error: Could not open input file: No such file or directory
linking:gcc -o "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm.exec" "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm.s" "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decaf-stdlib.c" ... failed (1)
clang: error: no such file or directory: '/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm.s'
running:/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-7.llvm.exec ...Traceback (most recent call last):
  File "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/llvm-run", line 172, in <module>
    result &= run("running", "%s.llvm.exec" % (out_prefix), ".run", None, out_prefix)
  File "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/llvm-run", line 90, in run
    retval = subprocess.call(shlex.split(cmd), stdin=infile, stdout=outoutfile, stderr=outerrfile)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 522, in call
    return Popen(*popenargs, **kwargs).wait()
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 710, in __init__
    errread, errwrite)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 1335, in _execute_child
    raise child_exception
OSError: [Errno 2] No such file or directory
